== 1.0.4

* bug fix
  * Fixed a bug when deleting an account with rememberable
  * Fixed a bug with custom controllers

== 1.0.3

* enhancements
  * HTML e-mails now have proper formatting
  * Do not remove MongoMapper options in find

== 1.0.2

* enhancements
  * Allows you set mailer content type (by github.com/glennr)

* bug fix
  * Uses the same content type as request on http authenticatable 401 responses

== 1.0.1

* enhancements
  * HttpAuthenticatable is not added by default automatically.
  * Avoid mass assignment error messages with current password.

* bug fix
  * Fixed encryptors autoload

== 1.0.0

* deprecation
  * :old_password in update_with_password is deprecated, use :current_password instead

* enhancements
  * Added Registerable
  * Added Http Basic Authentication support
  * Allow scoped_views to be customized per controller/mailer class
  * [#99] Allow authenticatable to used in change_table statements
  * Add mailer_content_type configuration parameter (by github.com/glennr)

== 0.9.2

* bug fix
  * Ensure inactive user cannot sign in
  * Ensure redirect to proper url after sign up

* enhancements
  * Added gemspec to repo
  * Added token authenticatable (by github.com/grimen)

== 0.9.1

* bug fix
  * Allow bigger salt size (by github.com/jgeiger)
  * Fix relative url root

== 0.9.0

* deprecation
  * devise :all is deprecated
  * :success and :failure flash messages are now :notice and :alert

* enhancements
  * Added devise lockable (by github.com/mhfs)
  * Warden 0.9.0 compatibility
  * Mongomapper 0.6.10 compatibility
  * Added Devise.add_module as hooks for extensions (by github.com/grimen)
  * Ruby 1.9.1 compatibility (by github.com/grimen)

* bug fix
  * Accept path prefix not starting with slash
  * url helpers should rely on find_scope!

== 0.8.2

* enhancements
  * Allow Devise.mailer_sender to be a proc (by github.com/grimen)

* bug fix